--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asgiref==3.8.1
+beautifulsoup4==4.12.3
+bleach==6.2.0
 Django==5.1.3
+django-ckeditor==6.5.1
 django-cors-headers==4.6.0
 django-filter==24.3
+django-js-asset==3.0.1
+django-summernote==0.8.20.0
 django-tinymce==4.1.0
 django-unfold==0.40.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 PyJWT==2.9.0
+soupsieve==2.6
 sqlparse==0.5.1
+webencodings==0.5.1
